--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-    <div id="frame-calculator_wrap" data-partner="moex" data-id="574082cdcbab1f74d6da5817292230ee"></div>
+    <div id="frame-calculator_wrap" data-id="574082cdcbab1f74d6da5817292230ee" data-erid="LjN8K338L"></div>
     <script type="text/javascript" src="https://osago.finuslugi.ru/js/frame-calc.js"></script>
 </body>
 </html>
