--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
         #frame-calculator_wrap {
             width: 100%;
             max-width: 600px;
+            height: 80vh; /* Ограничиваем высоту контейнера */
             margin: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
-            overflow: hidden;
+            overflow: auto; /* Добавляем скролл */
         }
     </style>
 </head>
