--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             background-color: #f4f4f9;
         }
         
-        #frame-calculator_wrap {
+        #mortgage-frame-calculator_wrap {
             width: 100%;
             max-width: 600px;
             height: 80vh; /* Ограничиваем высоту контейнера */
@@ -28,8 +28,8 @@
     </style>
 </head>
 <body>
-    <div id="frame-calculator_wrap" data-id="574082cdcbab1f74d6da5817292230ee" data-erid="LjN8K338L"></div>
-    <script type="text/javascript" src="https://osago.finuslugi.ru/js/frame-calc.js"></script>
+    <div id="mortgage-frame-calculator_wrap" data-id="574082cdcbab1f74d6da5817292230ee" data-color="#67C71C" data-color-hover="#cc0" data-erid="LjN8KWacg"></div>
+<script type="text/javascript" src="https://agents-test.inguru.dev/assets/js/mortgage-frame-calc.js"></script>
 </body>
 </html>
 
