--- a/index.html
+++ b/index.html
@@ -12,25 +12,41 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
             background-color: #f4f4f9;
         }
         
         #mortgage-frame-calculator_wrap {
             width: 100%;
             max-width: 600px;
-            height: 80vh; /* Ограничиваем высоту контейнера */
+            height: 80vh;
             margin: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
-            overflow: auto; /* Добавляем скролл */
+            overflow: auto;
+            background-color: #fff; /* Добавим фон для контейнера */
+        }
+
+        .loading-message {
+            text-align: center;
+            padding: 20px;
+            font-size: 18px;
+            color: #666;
         }
     </style>
 </head>
 <body>
-    <div id="mortgage-frame-calculator_wrap" data-id="574082cdcbab1f74d6da5817292230ee" data-color="#67C71C" data-color-hover="#cc0" data-erid="LjN8KWacg"></div>
-<script type="text/javascript" src="https://agents-test.inguru.dev/assets/js/mortgage-frame-calc.js"></script>
+    <div id="mortgage-frame-calculator_wrap" data-id="574082cdcbab1f74d6da5817292230ee" data-color="#67C71C" data-color-hover="#cc0" data-erid="LjN8KWacg">
+        <div class="loading-message">Загрузка калькулятора...</div>
+    </div>
+    <script type="text/javascript" src="https://agents-test.inguru.dev/assets/js/mortgage-frame-calc.js"></script>
+    <script>
+        // Обработка ошибок загрузки скрипта
+        window.onload = function() {
+            if (typeof MortgageFrameCalculator === 'undefined') {
+                document.querySelector('.loading-message').textContent = 'Не удалось загрузить калькулятор. Пожалуйста, попробуйте позже.';
+            }
+        };
+    </script>
 </body>
 </html>
-
-
