--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p>Используйте фрейм ниже для расчета стоимости ОСАГО:</p>
 
     <!-- Контейнер для фрейма -->
-    <div id="frame-calculator_wrap" data-partner="moex" data-id="700a87b02d5985cd4fd1835454c88975"></div>
+    <div id="frame-calculator_wrap" data-partner="moex" data-id="700a87b02d5985cd4fd1835454c88975" data-erid="LjN8K338L">></div>
 
     <!-- Скрипт для загрузки фрейма -->
     <script type="text/javascript" src="https://osago.finuslugi.ru/js/frame-calc.js"></script>
