--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
     <p>Используйте фрейм ниже для расчета стоимости ОСАГО:</p>
 
     <!-- Контейнер для фрейма -->
-    <div id="frame-calculator_wrap" data-partner="moex" data-id="700a87b02d5985cd4fd1835454c88975" data-erid="LjN8K338L"></div>
+    <div id="frame-calculator_wrap" data-id="574082cdcbab1f74d6da5817292230ee" data-erid="LjN8K338L"></div>
 
     <!-- Скрипт для загрузки фрейма -->
     <script type="text/javascript" src="https://osago.finuslugi.ru/js/frame-calc.js"></script>
 
 </body>
 </html>
+
