--- a/index.html
+++ b/index.html
@@ -19,11 +19,8 @@
     <h1>Калькулятор ОСАГО</h1>
     <p>Используйте фрейм ниже для расчета стоимости ОСАГО:</p>
 
-    <!-- Контейнер для фрейма -->
-    <div id="frame-calculator_wrap" data-id="574082cdcbab1f74d6da5817292230ee" data-erid="LjN8K338L"></div>
-
-    <!-- Скрипт для загрузки фрейма -->
-    <script type="text/javascript" src="https://osago.finuslugi.ru/js/frame-calc.js"></script>
+    <div id="frame-calculator_wrap" data-id="574082cdcbab1f74d6da5817292230ee" data-erid="LjN8JtyeQ"></div>
+<script type="text/javascript" src="https://osago.finuslugi.ru/js/frame-calc.js"></script>
 
 </body>
 </html>
