--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         /* Стили для контейнера фрейма */
         #frame-calculator_wrap {
             width: 100%;
-            height: 800px; /* Высота фрейма */
+            height: 100%; /* Высота фрейма */
             border: 1px solid #ccc; /* Граница для визуализации */
             overflow: auto; /* Включаем скролл внутри фрейма */
         }
